rsocket_springboot_demo/asm/websockets/control_plane/hello1_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: rsocket-ws-hello
  name: hello1-vs
spec:
  hosts:
    - hello1-svc
  http:
    - name: rsocket-ws-hello-route
      match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello1-svc
            subset: v1
    - name: rsocket-bye-route
      match:
        - uri:
            exact: /bye
      route:
        - destination:
            host: hello1-svc
            subset: v1
