rsocket_springboot_demo/asm/websockets/control_plane/hello2_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: rsocket-hello
  name: hello2-vs
spec:
  hosts:
    - hello2-svc
  rsocket:
    - name: rsocket-hello-route
      match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello2-svc
            subset: v1
          weight: 30
        - destination:
            host: hello2-svc
            subset: v2
          weight: 60
        - destination:
            host: hello2-svc
            subset: v3
          weight: 10
    - name: rsocket-bye-route
      match:
        - uri:
            exact: /bye
      route:
        - destination:
            host: hello2-svc
            subset: v1
          weight: 90
        - destination:
            host: hello2-svc
            subset: v2
          weight: 5
        - destination:
            host: hello2-svc
            subset: v3
          weight: 5
---
