rsocket_springboot_demo/asm/websockets/control_plane/hello3_destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: rsocket-ws-hello
  name: hello3-dr
spec:
  host: hello3-svc
  subsets:
    - name: v1
      labels:
        version: v1
