rsocket_springboot_demo/asm/websockets/control_plane/rsocket_springboot_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: rsocket-ws-hello
  name: hello-gateway-mesh
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 9001
        name: http
        protocol: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: rsocket-ws-hello
  name: hello-gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway-mesh
  http:
    - match:
        - port: 9001
      route:
        - destination:
            host: hello1-svc
